--- a/Python_Exceptions_Handling.ipynb
+++ b/Python_Exceptions_Handling.ipynb
@@ -317,8 +317,89 @@
         "##**Handling the \"File Not Found Error\" Exception**\n",
         "\n",
         "One common issue when working with files, is handling missing files.  The file your working with may be in a different location, the filename may be mispelled,or the file may not exist at all. \n",
-        " \n",
-        "![alt text](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRotmuLeEryb3-vMqDY9EjEzB5z10-hWoiJcu-vKO3U0wV44sDkBQ&s)"
+        "\n",
+        "![alt text](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRotmuLeEryb3-vMqDY9EjEzB5z10-hWoiJcu-vKO3U0wV44sDkBQ&s)\n",
+        "\n",
+        "Lets try to read a file that doesnt exist. the following code tries to read in the contents of \"Alice in Wonderland\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wW5F1q-35Sx5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        },
+        "outputId": "4e5fe54e-d755-48d5-a1f8-5fde89de97ed"
+      },
+      "source": [
+        "filename  = 'alice.txt'  # python wont be able to read from the file and will raise an exception #\n",
+        "with open(filename) as f_obj:\n",
+        "        contents = f_obj.read()\n",
+        "# In the error message below, the last line of the traceback reports a \"FileNotFoundError\" This is the exception python creates where it cant file the file its trying to open #\n",
+        "# In this case the open() function creates an error, so to handle it, the TRY block will begin \"just before\" the line the says open() #"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-269f9bdd60d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfilename\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;34m'alice.txt'\u001b[0m  \u001b[0;31m# python wont be able to read from the file and will raise an exception #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mcontents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# In the error message below, the last line of the traceback reports a \"FileNotFoundError\" This is the exception python creates where it cant file the file its trying to open #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# In this case the open() function creates an error, so to handle it, the TRY block will begin \"just before\" the line the says open() #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'alice.txt'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bs1J1D6_69PQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d346f042-81cc-452d-b737-a120bf699d71"
+      },
+      "source": [
+        "filename = 'alice.txt'\n",
+        "try:\n",
+        "  with open(filename) as f_obj:\n",
+        "    contents = f_obj.read()\n",
+        "except FileNotFoundError:\n",
+        "  msg = \"Sorry, the file you are looking for\" +  \" \" + filename + \" \" + \"Doesnt exist\"\n",
+        "  print(msg)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sorry, the file you are looking for alice.txt Doesnt exist\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DEYhvaTu86Ev",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Analyzing Text**\n",
+        "\n",
+        "*Reference: http://www.gutenberg.org/*\n",
+        "Lets use as our source content: \n",
+        "\n",
+        "*The Adventures of Alice in Wonderland*  by lewis carroll"
       ]
     }
   ]
