--- a/Python_Exceptions_Handling.ipynb
+++ b/Python_Exceptions_Handling.ipynb
@@ -330,7 +330,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 244
+          "height": 238
         },
         "outputId": "4e5fe54e-d755-48d5-a1f8-5fde89de97ed"
       },
@@ -363,7 +363,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
         "outputId": "d346f042-81cc-452d-b737-a120bf699d71"
       },
@@ -394,7 +394,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##**Analyzing Text**\n",
+        "##**Analyzing Text and Split() Method**\n",
         "\n",
         "*Reference: http://www.gutenberg.org/*\n",
         "Lets use as our source content: \n",
