--- a/Python_Exceptions_Handling.ipynb
+++ b/Python_Exceptions_Handling.ipynb
@@ -66,29 +66,13 @@
       "metadata": {
         "id": "-Vqu6j24O3e-",
         "colab_type": "code",
-        "outputId": "e4cf914f-6ec4-4639-adbf-4f61057f990e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 163
-        }
+        "colab": {}
       },
       "source": [
         "print(5/0)   # Run this block of code to see the traceback \"Division by 0\" #"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ZeroDivisionError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-20ef1e4f8387>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Run this block of code to see the traceback \"Division by 0\" #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -126,11 +110,7 @@
       "metadata": {
         "id": "eDBlTmWkMO8o",
         "colab_type": "code",
-        "outputId": "efa7175f-1cca-41cd-d566-15f00d8c7d56",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "try:   # we put print(5/0), the line that caused the error in a try block. If the code in the try block works , pythin will SKIP over the except block # \n",
@@ -139,15 +119,7 @@
         "  print(\"you cant divide by 0! \")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "you cant divide by 0! \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -176,11 +148,7 @@
       "metadata": {
         "id": "deLqMlDzHzL7",
         "colab_type": "code",
-        "outputId": "1a78661c-cdc0-4c76-b199-5843173d4412",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 418
-        }
+        "colab": {}
       },
       "source": [
         "print(\"Give me two numbers, and I'll divide them.\")\n",
@@ -198,36 +166,7 @@
         "  # this program does nothing to handle exceptions or errors so asking to divide by 0 will cause a crash.... Try it #"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Give me two numbers, and I'll divide them.\n",
-            "Enter 'q' to quit.\n",
-            "\n",
-            "First number: 10\n",
-            "\n",
-            "Second number: 20\n",
-            "0.5\n",
-            "\n",
-            "First number: 90\n",
-            "\n",
-            "Second number: 0\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ZeroDivisionError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-57a7c0e3955a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0msecond_number\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'q'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m   \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_number\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecond_number\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# we divide these two number to get the answer #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m   \u001b[0;31m# this program does nothing to handle exceptions or errors so asking to divide by 0 will cause a crash.... Try it #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -328,11 +267,7 @@
       "metadata": {
         "id": "wW5F1q-35Sx5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "outputId": "4e5fe54e-d755-48d5-a1f8-5fde89de97ed"
+        "colab": {}
       },
       "source": [
         "filename  = 'alice.txt'  # python wont be able to read from the file and will raise an exception #\n",
@@ -341,31 +276,15 @@
         "# In the error message below, the last line of the traceback reports a \"FileNotFoundError\" This is the exception python creates where it cant file the file its trying to open #\n",
         "# In this case the open() function creates an error, so to handle it, the TRY block will begin \"just before\" the line the says open() #"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-269f9bdd60d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfilename\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;34m'alice.txt'\u001b[0m  \u001b[0;31m# python wont be able to read from the file and will raise an exception #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mcontents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# In the error message below, the last line of the traceback reports a \"FileNotFoundError\" This is the exception python creates where it cant file the file its trying to open #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# In this case the open() function creates an error, so to handle it, the TRY block will begin \"just before\" the line the says open() #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'alice.txt'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bs1J1D6_69PQ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d346f042-81cc-452d-b737-a120bf699d71"
+        "colab": {}
       },
       "source": [
         "filename = 'alice.txt'\n",
@@ -376,16 +295,21 @@
         "  msg = \"Sorry, the file you are looking for\" +  \" \" + filename + \" \" + \"Doesnt exist\"\n",
         "  print(msg)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Sorry, the file you are looking for alice.txt Doesnt exist\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "abgvyKf9QyOA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -399,7 +323,42 @@
         "*Reference: http://www.gutenberg.org/*\n",
         "Lets use as our source content: \n",
         "\n",
-        "*The Adventures of Alice in Wonderland*  by lewis carroll"
+        "*The Adventures of Alice in Wonderland*  by lewis carroll\n",
+        "\n",
+        "You can analyze text files tha contain entire books. Lets pull the text of Alice in wonderland and try to count the number of words in the text. We will utilize the string  method **Split()**. which can build a list of words from a string. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iaWBZUN1QXab",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "631513bb-bc5f-4f72-8ab2-23670bdee654"
+      },
+      "source": [
+        "title = 'Alice in Wonderland'\n",
+        "title.split()  # The split method seperates a string into parts whenever it find a space and stores all the parts of the string in a list. the results is a list of words from the string #\n",
+        "# some punctuation may also appears with the words, to count the number of words , we will use split() on the entire test#\n",
+        "# then we will countnthe number of items in the list to get an sense of the total number of words in the text # "
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Alice', 'in', 'Wonderland']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
       ]
     }
   ]
